Fix color scheme for dark mode.

--- a/assets/css/solarized.css
+++ b/assets/css/solarized.css
@@ -49,8 +49,7 @@
   --sol-emph:     var(--sol-base01);
 }
 
-@media (min-width: 1px) {
-@media (prefers-color-scheme dark) {
+@media (prefers-color-scheme: dark) {
   :root {
     --title-fg: #ddd;
     --text-fg: #9a9a9a;
@@ -72,7 +71,6 @@
     --sol-body:     var(--sol-base0);
     --sol-emph:     var(--sol-base1);
   }
-}
 }
 
 /*  Syntax highlighting styles */
